--- a/public/teams.html
+++ b/public/teams.html
@@ -26,10 +26,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="../stylesheets/normalize.css" />
-  <link rel="stylesheet" href="../stylesheets/main.css" />
-  <link rel="stylesheet" href="../stylesheets/styles.css" />
-  <link rel="stylesheet" href="../stylesheets/contact.css" />
+  <link rel="stylesheet" href="/stylesheets/normalize.css" />
+  <link rel="stylesheet" href="/stylesheets/main.css" />
+  <link rel="stylesheet" href="/stylesheets/styles.css" />
+  <link rel="stylesheet" href="/stylesheets/contact.css" />
 </head>
 
 <body>
@@ -73,70 +73,8 @@
     </ul>
   </nav>
 
-  <div id="contact">
-    <div id="contact-wrapper" class="contact-wrapper">
-      <h4>Bantay <span>Bayan</span></h4>
-      <h1>Contact & Partnership Form</h1>
+  <div class="container">
 
-      <form id="contact-form">
-        <div id="form-box">
-          <div class="form-group">
-            <label>Pangalan / Pangalan ng Organisasyon</label>
-            <input type="text" name="Pangalan / Pangalan ng Organisasyon" />
-          </div>
-          <div class="form-group">
-            <label>Email</label>
-            <input type="email" name="Email" />
-          </div>
-          <div class="form-group">
-            <label>Subject</label>
-            <input type="text" name="Subject" />
-          </div>
-          <div class="form-group">
-            <label>Message</label>
-            <textarea name="Message" cols="30" rows="10"></textarea>
-          </div>
-        </div>
-        <div class="flex-end">
-          <button type="submit">Send Message</button>
-        </div>
-      </form>
-    </div>
-    <div class="contact-wrapper">
-      <div id="hatid-wrapper">
-        <div>
-          <h2>
-            Ang Bantay Bayan ay hatid sa inyo ng mga sumusunod na
-            organisasyon:
-          </h2>
-          <div class="flex-images">
-            <img src="/assets/icons/GoodGovPH.png" alt="GoodGovPH" />
-            <img src="/assets/icons/DSC.png" alt="DSC Loyola" />
-            <img src="/assets/icons/The Initiative PH.png" alt="Initiative PH" />
-            <img src="/assets/icons/Kadiwa.png" alt="Kadiwa" />
-          </div>
-        </div>
-
-        <div>
-          <h2>Maaaring makipag-ugnayan kay:</h2>
-          <br />
-          <div id="contact-details">
-            <h2>Ashley De Quiroz</h2>
-            <p>Direktor, Bantay Bayan</p>
-            <p>0977 163 9979</p>
-            <a href="mailto:goodgovph.official@gmail.com">goodgovph.official@gmail.com</a>
-            <div id="social-media">
-              <a href="https://www.facebook.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/icons/facebook.png" alt="facebook" />
-              </a>
-              <a href="https://www.twitter.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/icons/twitter.png" alt="twitter" />
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 
   <footer>
@@ -172,8 +110,6 @@
         <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
-  <script src="/scripts/jquery.min.js"></script>
-  <script src="/scripts/index.js"></script>
 </body>
 
 </html>
