--- a/public/contact.html
+++ b/public/contact.html
@@ -26,10 +26,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="../stylesheets/normalize.css" />
-  <link rel="stylesheet" href="../stylesheets/main.css" />
-  <link rel="stylesheet" href="../stylesheets/styles.css" />
-  <link rel="stylesheet" href="../stylesheets/contact.css" />
+  <link rel="stylesheet" href="./src/stylesheets/normalize.css" />
+  <link rel="stylesheet" href="./src/stylesheets/main.css" />
+  <link rel="stylesheet" href="./src/stylesheets/styles.css" />
+  <link rel="stylesheet" href="./src/stylesheets/contact.css" />
 </head>
 
 <body>
@@ -42,8 +42,8 @@
 
     <input type="checkbox" class="checkbox" id="check" />
 
-    <a href="/public/">
-      <img src="/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
+    <a href="/">
+      <img src="./src/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
     </a>
 
     <ul class="page_menu">
@@ -51,24 +51,24 @@
         <!--Buffer-->
       </li>
       <li>
-        <a class="about" href="/public/about.html">About</a>
+        <a class="about" href="about.html">About</a>
       </li>
       <li>
         <div class="forms">Forms</div>
         <div class="formsdrop">
-          <a href="/public/forms/weekly-reports.html">Weekly Reports</a>
-          <a href="/public/forms/help-desk.html">Help Desk</a>
-          <a href="/public/forms/volunteers.html">Volunteers</a>
+          <a href="weekly-reports.html">Weekly Reports</a>
+          <a href="help-desk.html">Help Desk</a>
+          <a href="volunteers.html">Volunteers</a>
         </div>
       </li>
       <li>
-        <a class="faqs" href="/public/faqs.html">FAQs</a>
+        <a class="faqs" href="faqs.html">FAQs</a>
       </li>
       <li>
-        <a class="team" href="/public/teams.html">Team</a>
+        <a class="team" href="teams.html">Team</a>
       </li>
       <li>
-        <a class="contact" href="/public/contact.html">Contact</a>
+        <a class="contact" href="contact.html">Contact</a>
       </li>
     </ul>
   </nav>
@@ -110,10 +110,10 @@
             organisasyon:
           </h2>
           <div class="flex-images">
-            <img src="/assets/icons/GoodGovPH.png" alt="GoodGovPH" />
-            <img src="/assets/icons/DSC.png" alt="DSC Loyola" />
-            <img src="/assets/icons/The Initiative PH.png" alt="Initiative PH" />
-            <img src="/assets/icons/Kadiwa.png" alt="Kadiwa" />
+            <img src="./src/assets/icons/GoodGovPH.png" alt="GoodGovPH" />
+            <img src="./src/assets/icons/DSC.png" alt="DSC Loyola" />
+            <img src="./src/assets/icons/The Initiative PH.png" alt="Initiative PH" />
+            <img src="./src/assets/icons/Kadiwa.png" alt="Kadiwa" />
           </div>
         </div>
 
@@ -127,10 +127,10 @@
             <a href="mailto:goodgovph.official@gmail.com">goodgovph.official@gmail.com</a>
             <div id="social-media">
               <a href="https://www.facebook.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/icons/facebook.png" alt="facebook" />
+                <img src="./src/assets/icons/facebook.png" alt="facebook" />
               </a>
               <a href="https://www.twitter.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/icons/twitter.png" alt="twitter" />
+                <img src="./src/assets/icons/twitter.png" alt="twitter" />
               </a>
             </div>
           </div>
@@ -141,7 +141,7 @@
 
   <footer>
     <div class="footerContent">
-      <img src="/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
+      <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
       <div class="footerSubContent">
         <div class="footerIcons">
           <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
@@ -172,8 +172,8 @@
         <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
-  <script src="/scripts/jquery.min.js"></script>
-  <script src="/scripts/index.js"></script>
+  <script src="./src/scripts/jquery.min.js"></script>
+  <script src="./src/scripts/index.js"></script>
 </body>
 
 </html>
