--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../stylesheets/normalize.css">
-  <link rel="stylesheet" href="../stylesheets/main.css">
-  <link rel="stylesheet" href="../stylesheets/styles.css">
+  <link rel="stylesheet" href="./src/stylesheets/normalize.css">
+  <link rel="stylesheet" href="./src/stylesheets/main.css">
+  <link rel="stylesheet" href="./src/stylesheets/styles.css">
 
 
 </head>
@@ -45,8 +45,8 @@
 
     <input type="checkbox" class="checkbox" id="check" />
 
-    <a href="/public/">
-      <img src="/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
+    <a href="/">
+      <img src="./src/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
     </a>
 
     <ul class="page_menu">
@@ -54,24 +54,24 @@
         <!--Buffer-->
       </li>
       <li>
-        <a class="about" href="/public/about.html">About</a>
+        <a class="about" href="about.html">About</a>
       </li>
       <li>
         <div class="forms">Forms</div>
         <div class="formsdrop">
-          <a href="/public/forms/weekly-reports.html">Weekly Reports</a>
-          <a href="/public/forms/help-desk.html">Help Desk</a>
-          <a href="/public/forms/volunteers.html">Volunteers</a>
+          <a href="weekly-reports.html">Weekly Reports</a>
+          <a href="help-desk.html">Help Desk</a>
+          <a href="volunteers.html">Volunteers</a>
         </div>
       </li>
       <li>
-        <a class="faqs" href="/public/faqs.html">FAQs</a>
+        <a class="faqs" href="faqs.html">FAQs</a>
       </li>
       <li>
-        <a class="team" href="/public/teams.html">Team</a>
+        <a class="team" href="teams.html">Team</a>
       </li>
       <li>
-        <a class="contact" href="/public/contact.html">Contact</a>
+        <a class="contact" href="contact.html">Contact</a>
       </li>
     </ul>
   </nav>
@@ -79,7 +79,7 @@
 
   <div class="main">
     <div class="main_content">
-      <img src="../assets/images/bantay_bayan_logo.png">
+      <img src="./src/assets/images/bantay_bayan_logo.png">
       <br>
       <label>Para sa mabuting pamamahala sa panahon ng krisis!</label>
     </div>
@@ -95,13 +95,13 @@
       <a href="#">SEEK LEGAL AID</a>
     </div>
 
-    <img src="../assets/images/Image.png" class="helpdesk_pic">
+    <img src="./src/assets/images/Image.png" class="helpdesk_pic">
 
   </div>
 
   <div class="survey">
 
-    <img class="survey_pic" src="../assets/images/Image.png">
+    <img class="survey_pic" src="./src/assets/images/Image.png">
 
     <div class="survey_content">
       <h1>WEEKLY LGU <br> RESPONSE SURVEY </h1>
@@ -120,10 +120,10 @@
       </div>
       <a href="#">VOLUNTEER NOW</a>
       <div class="minimen">
-        <img src="../assets/images/Volunteers.png">
-        <img src="../assets/images/Volunteers.png">
-        <img src="../assets/images/Volunteers.png">
-        <img src="../assets/images/Volunteers.png">
+        <img src="./src/assets/images/Volunteers.png">
+        <img src="./src/assets/images/Volunteers.png">
+        <img src="./src/assets/images/Volunteers.png">
+        <img src="./src/assets/images/Volunteers.png">
       </div>
     </div>
   </div>
@@ -131,7 +131,7 @@
 
   <footer>
     <div class="footerContent">
-      <img src="/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
+      <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
       <div class="footerSubContent">
         <div class="footerIcons">
           <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
