--- a/public/teams.html
+++ b/public/teams.html
@@ -26,10 +26,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="/stylesheets/normalize.css" />
-  <link rel="stylesheet" href="/stylesheets/main.css" />
-  <link rel="stylesheet" href="/stylesheets/styles.css" />
-  <link rel="stylesheet" href="/stylesheets/contact.css" />
+  <link rel="stylesheet" href="./src/stylesheets/normalize.css" />
+  <link rel="stylesheet" href="./src/stylesheets/main.css" />
+  <link rel="stylesheet" href="./src/stylesheets/styles.css" />
+  <link rel="stylesheet" href="./src/stylesheets/contact.css" />
 </head>
 
 <body>
@@ -42,8 +42,8 @@
 
     <input type="checkbox" class="checkbox" id="check" />
 
-    <a href="/public/">
-      <img src="/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
+    <a href="/">
+      <img src="./src/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
     </a>
 
     <ul class="page_menu">
@@ -51,24 +51,24 @@
         <!--Buffer-->
       </li>
       <li>
-        <a class="about" href="/public/about.html">About</a>
+        <a class="about" href="about.html">About</a>
       </li>
       <li>
         <div class="forms">Forms</div>
         <div class="formsdrop">
-          <a href="/public/forms/weekly-reports.html">Weekly Reports</a>
-          <a href="/public/forms/help-desk.html">Help Desk</a>
-          <a href="/public/forms/volunteers.html">Volunteers</a>
+          <a href="weekly-reports.html">Weekly Reports</a>
+          <a href="help-desk.html">Help Desk</a>
+          <a href="volunteers.html">Volunteers</a>
         </div>
       </li>
       <li>
-        <a class="faqs" href="/public/faqs.html">FAQs</a>
+        <a class="faqs" href="faqs.html">FAQs</a>
       </li>
       <li>
-        <a class="team" href="/public/teams.html">Team</a>
+        <a class="team" href="teams.html">Team</a>
       </li>
       <li>
-        <a class="contact" href="/public/contact.html">Contact</a>
+        <a class="contact" href="contact.html">Contact</a>
       </li>
     </ul>
   </nav>
@@ -79,7 +79,7 @@
 
   <footer>
     <div class="footerContent">
-      <img src="/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
+      <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
       <div class="footerSubContent">
         <div class="footerIcons">
           <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
