with additional organizations and revised the org section of style.css

--- a/public/about.html
+++ b/public/about.html
@@ -80,7 +80,7 @@
             mamamayan sa panahon ng krisis tulad ng COVID-19
          </p>
     </div>
-    <img src="../assets/images/bantay_bayan_logo.png" class="ovw_bantaybayan_logo">
+    <img src="../assets/images/bantay_bayan_logo.png" class="ovw_bantaybayan_logo" alt="logo">
   </div>
 
   <div class="enm_bantaybayan">
@@ -123,12 +123,12 @@
             ang LGU base sa sumusunod na criteria: 
           </p>
         </div>
-        <img src="../assets/images/about_citizen_mobilization.png" class="citizen_mobilization_logo">
+        <img src="../assets/images/about_citizen_mobilization.png" class="citizen_mobilization_logo" alt="decoration">
       </div>
 
       <div class="citizen_mobilization_cards">
         <div class="citizen_mobilization_card1">
-          <p><img src="../assets/images/feedback-24px 1.png"> RESPONSIVENESS</p>
+          <p><img src="../assets/images/feedback-24px 1.png" alt="icon"> RESPONSIVENESS</p>
           <ul>
             <li>Public health services</li>
             <li>Emergency response mechanism</li>
@@ -137,7 +137,7 @@
           </ul>
         </div>
         <div class="citizen_mobilization_card2">
-          <p><img src="../assets/images/gavel-24px 1.png"> PEACE, SECURITY, AND RULE OF LAW</p>
+          <p><img src="../assets/images/gavel-24px 1.png" alt="icon"> PEACE, SECURITY, AND RULE OF LAW</p>
           <ul>
             <li>Enforcement of home quarantine, curfew, and lockdown</li>
             <li>Grievance mechanisms</li>
@@ -145,7 +145,7 @@
           </ul>
         </div>
         <div class="citizen_mobilization_card3">
-          <p><img src="../assets/images/people_alt-24px 1.png"> SOCIAL AND ECONOMIC SERVIC</p>
+          <p><img src="../assets/images/people_alt-24px 1.png" alt="icon"> SOCIAL AND ECONOMIC SERVIC</p>
           <ul>
             <li>Distribution of relief goods</li>
             <li>Financial assistance/Relief initiatives</li>
@@ -153,7 +153,7 @@
           </ul>
         </div>
         <div class="citizen_mobilization_card4">
-          <p><img src="../assets/images/visibility-24px 1.png"> TRANSPARENCY & COMMUNICATION</p>
+          <p><img src="../assets/images/visibility-24px 1.png" alt="icon"> TRANSPARENCY & COMMUNICATION</p>
           <ul>
             <li>Risk Communication</li>
             <li>Public Engagement</li>
@@ -176,8 +176,8 @@
           </p>
         </div>
         <div class="legal_response_logo">
-          <img src="../assets/images/legal_response_logo1.png">
-          <img src="../assets/images/legal_response_logo2.png" class="lr_logo2">
+          <img src="../assets/images/legal_response_logo1.png" alt="decoration">
+          <img src="../assets/images/legal_response_logo2.png" class="lr_logo2" alt="decoration">
         </div>
       </div>
       <hr>
@@ -196,7 +196,7 @@
           </p>
         </div>
         <div class="usap_tayo_logo">
-          <img src="../assets/images/usap_tayo_logo.png">
+          <img src="../assets/images/usap_tayo_logo.png" alt="decoration">
         </div>
       </div>
       <iframe src="https://open.spotify.com/embed-podcast/show/5F2Yxmz0AmVONr1h34rvBV" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -210,10 +210,10 @@
     <div class="partner_content">
       <div class="partner_subcontent1">
         <div class="partner_subcontent1_head">
-          <img src="../assets/images/good_gov_logo.png" class="abt_good_gov_logo">
+          <img src="../assets/images/good_gov_logo.png" class="abt_good_gov_logo" alt="goodgov_ph">
           <h4>GoodGovPH</h4>
-          <a href="https://facebook.com/BantayBayanTayo" target="_blank"><img src="../assets/images/about_fb.png" class="abt_fb_1"></a>
-          <a href="https://l.facebook.com/l.php?u=http%3A%2F%2Ftwitter.com%2FBantayBayanTayo%3Ffbclid%3DIwAR1XGVB-ntc44bMnby-eIy2M2PxsyXfxhafhCHt-gfrmQFuWewhdFv_Bzi8&h=AT2VaHz6xjRRLGQ4U1AhXaaHJ1joIIB_UgjrqD2nqNQj33cuhgoLPO34STyFcbMJFNg8pBQquCteBqRsFzSUqBegPJ18J-jDkgWkZsokoHSfS-1W8ELTeOxdE55cVKHi7qmbi2_IKpInrIvGfRfeSg" target="_blank"><img src="../assets/images/about_twitter.png" class="abt_twitter_1"></a>
+          <a href=" https://facebook.com/GoodGovPH" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_fb.png" class="abt_fb_1" alt="fb_icon"></a>
+          <a href="https://twitter.com/GoodGovPH" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_twitter.png" class="abt_twitter_1" alt="twitter_icon"></a>
         </div>
         <p>
           Ang GoodGov PH ay isang kilusan ng mga kabataang nagsusulong ng mabuting pamamahala 
@@ -227,10 +227,10 @@
       </div>
       <div class="partner_subcontent2">
         <div class="partner_subcontent2_head">
-          <img src="../assets/images/dsc_loyola_logo.png" class="abt_dsc_logo">
+          <img src="../assets/images/dsc_loyola_logo.png" class="abt_dsc_logo" alt="dsc_loyola">
           <h4>DSC - Loyola</h4>
-          <a href="https://www.facebook.com/dscloyola/" target="_blank"><img src="../assets/images/about_fb.png" class="abt_fb_2"></a>
-          <a href="https://twitter.com/dscloyola/" target="_blank"><img src="../assets/images/about_twitter.png" class="abt_twitter_2"></a>
+          <a href="https://www.facebook.com/dscloyola/" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_fb.png" class="abt_fb_2" alt="fb_icon"></a>
+          <a href="https://twitter.com/dscloyola/" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_twitter.png" class="abt_twitter_2" alt="twitter_icon"></a>
         </div>
         <p>
           Developer Student Clubs Loyola is a student organization powered by Google Developers that aims 
@@ -250,20 +250,44 @@
       <p>Partner organizations</p>
     </div>
     <div class="org_content">
-      <div class="org1">
-        <img src="../assets/images/The Initiative PH 1.png" class="the_initiative_ph_logo">
+      <div class="org">
+        <img src="../assets/images/The Initiative PH 1.png" class="the_initiative_ph_logo" alt="the_initiative_ph">
         <h4>The Initiative PH</h4>
         <div>
-          <a href="#" target="_blank"><img src="../assets/images/about_fb.png" class="org_fb_2"></a>
-          <a href="#" target="_blank"><img src="../assets/images/about_twitter.png" class="org_twitter_2"></a>
+          <a href="https://www.facebook.com/theinitiativeph/" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_fb.png"  alt="fb_icon"></a>
+          <a href="https://twitter.com/theinitiativeph/" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_twitter.png"  alt="twitter_icon"></a>
         </div>
       </div>
-      <div class="org2">
-        <img src="../assets/images/Kadiwa 1.png" class="kadiwa_logo">
+      <div class="org">
+        <img src="../assets/images/Kadiwa 1.png" class="kadiwa_logo" alt="kadiwa">
         <h4>Kadiwa Student Coaliton</h4>
         <div>
-          <a href="#" target="_blank"><img src="../assets/images/about_fb.png" class="org_fb_2"></a>
-          <a href="#" target="_blank"><img src="../assets/images/about_twitter.png" class="org_twitter_2"></a>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_fb.png"  alt="fb_icon"></a>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_twitter.png"  alt="twitter_icon"></a>
+        </div>
+      </div>
+      <div class="org">
+        <img src="../assets/images/kilos_logo.jpg" class="kilos_logo" alt="kilos">
+        <h4>KILOS Youth</h4>
+        <div>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_fb.png"  alt="fb_icon"></a>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_twitter.png"  alt="twitter_icon"></a>
+        </div>
+      </div>
+      <div class="org">
+        <img src="../assets/images/advocates_logo.png" class="advocates_logo" alt="advocates">
+        <h4>Youth Advocates for the Philippines</h4>
+        <div>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_fb.png"  alt="fb_icon"></a>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_twitter.png"  alt="twitter_icon"></a>
+        </div>
+      </div>
+      <div class="org">
+        <img src="../assets/images/skc_logo.jpg" class="skc_logo" alt="skc">
+        <h4>Sigaw ng Kabataan Coalition</h4>
+        <div>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_fb.png"  alt="fb_icon"></a>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="../assets/images/about_twitter.png"  alt="twitter_icon"></a>
         </div>
       </div>
     </div>
