--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 
   <div class="main">
     <div class="main_content">
-      <img src="../assets/images/bantay_bayan_logo.png">
+      <img src="../assets/images/bantay_bayan_logo.png" alt="logo">
       <br>
       <label>Para sa mabuting pamamahala sa panahon ng krisis!</label>
     </div>   
@@ -93,13 +93,13 @@
       <a href="#">SEEK LEGAL AID</a>
     </div>
      
-    <img src="../assets/images/Image.png" class="helpdesk_pic">
+    <img src="../assets/images/Image.png" class="helpdesk_pic" alt="helpdesk picture">
     
   </div>
 
   <div class="survey">
 
-    <img class="survey_pic" src="../assets/images/Image.png">
+    <img src="../assets/images/Image.png" class="survey_pic" alt=" survey picture">
 
     <div class="survey_content">
       <h1>WEEKLY LGU <br> RESPONSE SURVEY </h1>
@@ -118,10 +118,10 @@
       </div>
       <a href="#">VOLUNTEER NOW</a>
       <div class="minimen">
-        <img src="../assets/images/Volunteers.png">
-        <img src="../assets/images/Volunteers.png">
-        <img src="../assets/images/Volunteers.png">
-        <img src="../assets/images/Volunteers.png">
+        <img src="../assets/images/Volunteers.png" alt="decoration">
+        <img src="../assets/images/Volunteers.png" alt="decoration">
+        <img src="../assets/images/Volunteers.png" alt="decoration">
+        <img src="../assets/images/Volunteers.png" alt="decoration">
       </div>
     </div>
   </div>
